{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "b6bc64d5-2059-4e9b-868c-1c34226dea6a",
            "actions": [
                {
                    "name": "BasicAttack",
                    "type": "Button",
                    "id": "edb786cb-0f8f-484f-b9ca-316d68be7c5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "b23a41e0-fafb-4627-aee6-24a928f27651",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "15f6ce3e-9f32-4709-8da9-eeabba6c5a22",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UtilitySkill",
                    "type": "Button",
                    "id": "729f5cc8-8dc3-40ae-99eb-7599df9d7168",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimarySkill",
                    "type": "Button",
                    "id": "621bd95a-16c0-43e2-8e88-efbdd3e4fb38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondarySkill",
                    "type": "Button",
                    "id": "6819fcc1-14b3-4e06-9e7f-f479f7785e32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "cb9eac0a-8158-41bc-b671-ec605d4e7763",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ec5c4389-3556-4d23-a26e-64afed5bc821",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "243dfc2e-e577-4df9-be47-dcf9e518ff75",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "344150bf-3899-4af4-b09b-ab90e0fc399f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "566f8b67-cce4-443e-a00e-c5ae6c6d9efd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d1d9e4ab-8d0e-452e-926a-36861a8014fd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "50c64f72-b05f-4cfe-bfd2-e278608e79e0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "802bf684-d1b5-44bb-930f-67cd3c5c26cb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aafc0123-f554-4259-9b90-ae5dc12abd73",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "UtilitySkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01f2b478-2e84-4968-94d5-1d1eab0d48f6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PrimarySkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba9e9e56-7ade-451d-ba31-6cffaff27705",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SecondarySkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cda796b-9ce8-4baf-93b1-8e8f93b79394",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}